PopularView, root refactoring, change modal scrollbar disabling to position fixed html element

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -8,10 +8,15 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-y: scroll;
+  width: 100%;
+  background: $black;
+}
+
 body {
   background: $black;
   font-family: 'Montserrat', sans-serif;
-  overflow-y: scroll;
 }
 
 /* width */
